--- a/frontend/src/app/components/location/location.component.html
+++ b/frontend/src/app/components/location/location.component.html
@@ -31,6 +31,6 @@
   </div>
 </div>
 <div class="row mt-3 justify-content-center gap-md-5 gap-2 px-5">
-  <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page" class="btn btn-secondary col-5 col-md-2">Atrás</a>
-  <a class="btn btn-primary col-5 col-md-2" (click)="next($event)">Siguiente</a>
+  <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page" class="btn btn-secondary col-5 col-md-2">{{'BACK' | translate}}</a>
+  <a class="btn btn-primary col-5 col-md-2" (click)="next($event)">{{'NEXT' | translate}}</a>
 </div>
