--- a/frontend/src/app/components/budget/budget.component.html
+++ b/frontend/src/app/components/budget/budget.component.html
@@ -11,6 +11,6 @@
 <div class="row mt-3 justify-content-center gap-md-5 gap-2 px-5">
   <a class="btn btn-secondary col-5 col-md-2" (click)="back($event)">{{'BACK' | translate}}</a>
   <div id="budget-event" class="btn btn-primary col-5 col-md-2" (click)="next($event)">
-    <span id="budget-carge" class="">{{'NEXT' | translate}}</span>
+    <span id="budget-load" class="">{{'NEXT' | translate}}</span>
   </div>
 </div>
